--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="resources/graphics/volleyball.svg"
+      href="resources/graphics/favicon.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
